cmake_minimum_required (VERSION 2.8)
project(velo)

find_package(PCL 1.8 REQUIRED)
find_package(OpenCV 3.0 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
include_directories(${OpenCV_INCLUDE_DIRS})
link_directories(${OpenCV_LIBRARY_DIRS})
add_definitions(${OpenCV_DEFINITIONS})

set(CMAKE_MODULE_PATH "/home/dllu/sync/proj/isam/isam/cmake")
find_package(Eigen3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIR})
link_libraries(${EIGEN3_LIBRARY_DIR})
find_package(Cholmod REQUIRED)
include_directories(${CHOLMOD_INCLUDE_DIR})
link_libraries(${CHOLMOD_LIBRARY_DIR})

include_directories("/usr/local/include/isam/")
include_directories("/usr/local/include/")
add_executable(main main.cpp)
target_link_libraries(main isam cholmod ${PCL_LIBRARIES} ${OpenCV_LIBRARIES})
set_target_properties(main PROPERTIES COMPILE_FLAGS "-DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS=-O3")
