cmake_minimum_required (VERSION 2.8)
project(velo)

set(CMAKE_MODULE_PATH ".")
find_package(PCL 1.8 REQUIRED)
find_package(OpenCV 3.0 REQUIRED)
find_package(Ceres REQUIRED)
find_package(Glog REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
include_directories(${OpenCV_INCLUDE_DIRS})
link_directories(${OpenCV_LIBRARY_DIRS})
add_definitions(${OpenCV_DEFINITIONS})
link_directories(${Ceres_LIBRARY_DIRS})
add_definitions(${Ceres_DEFINITIONS})
include_directories(${Glog_INCLUDE_DIRS})
link_directories(${Glog_LIBRARY_DIRS})
add_definitions(${Glog_DEFINITIONS})
include_directories("/usr/local/include/")
include_directories("/usr/local/include/ceres")

add_executable(main main.cpp)
target_link_libraries(main ${CERES_LIBRARIES} ${Glog_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES})
set_target_properties(main PROPERTIES COMPILE_FLAGS "-DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS=-O3")
